--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,12 @@
 name = "aoc"
 version = "0.1.0"
 edition = "2021"
+default-run = "2022"
+
+
+[[bin]]
+name = "2022"
+path = "./src/2022/main.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
